Possibly fixed wrapping in older Edge 44

--- a/static/style.css
+++ b/static/style.css
@@ -1,4 +1,7 @@
-body { font-family:Verdana, Geneva, sans-serif; font-size: 18px; }
+body {
+	font-family:Verdana, Geneva, sans-serif;
+	font-size: 18px;
+}
 
 .marginRow{
 	 margin-top:		0px 		!important;
@@ -199,9 +202,11 @@ hr{margin-top:1rem;margin-bottom:1rem;border:0;border-top:1px solid rgba(0,0,0,1
 	padding-top: .1rem;
 	padding-bottom: .1rem;
 	padding-left: .2rem;
-	word-break: break-word;
 	margin: 6px;
 	margin-left: 8px;
+
+	-ms-word-break: break-all;
+	word-break: break-word;
 }
 .rankedVote { width: 30px; padding: 0px 5px; }
 .rankedVoteIntro { font-style: italic; }
